# NextCua

./: .gitignore  pyproject.toml
Training/: button_processing.py  image_processing.py  ocr.py
dataset/: README.md  __init__.py  data_processing.py  recoder.py
